--- a/notebooks/data_exploration_and_cleaning_data_raw_data.ipynb
+++ b/notebooks/data_exploration_and_cleaning_data_raw_data.ipynb
@@ -113,6 +113,449 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show all columns\n",
+    "pd.set_option('display.max_columns', None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patient_nbr</th>\n",
+       "      <th>race</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>admission_type_id</th>\n",
+       "      <th>discharge_disposition_id</th>\n",
+       "      <th>admission_source_id</th>\n",
+       "      <th>time_in_hospital</th>\n",
+       "      <th>num_lab_procedures</th>\n",
+       "      <th>num_procedures</th>\n",
+       "      <th>num_medications</th>\n",
+       "      <th>number_outpatient</th>\n",
+       "      <th>number_emergency</th>\n",
+       "      <th>number_inpatient</th>\n",
+       "      <th>diag_1</th>\n",
+       "      <th>diag_2</th>\n",
+       "      <th>diag_3</th>\n",
+       "      <th>number_diagnoses</th>\n",
+       "      <th>max_glu_serum</th>\n",
+       "      <th>A1Cresult</th>\n",
+       "      <th>metformin</th>\n",
+       "      <th>repaglinide</th>\n",
+       "      <th>nateglinide</th>\n",
+       "      <th>chlorpropamide</th>\n",
+       "      <th>glimepiride</th>\n",
+       "      <th>acetohexamide</th>\n",
+       "      <th>glipizide</th>\n",
+       "      <th>glyburide</th>\n",
+       "      <th>tolbutamide</th>\n",
+       "      <th>pioglitazone</th>\n",
+       "      <th>rosiglitazone</th>\n",
+       "      <th>acarbose</th>\n",
+       "      <th>miglitol</th>\n",
+       "      <th>troglitazone</th>\n",
+       "      <th>tolazamide</th>\n",
+       "      <th>insulin</th>\n",
+       "      <th>glyburide-metformin</th>\n",
+       "      <th>glipizide-metformin</th>\n",
+       "      <th>glimepiride-pioglitazone</th>\n",
+       "      <th>metformin-rosiglitazone</th>\n",
+       "      <th>metformin-pioglitazone</th>\n",
+       "      <th>change</th>\n",
+       "      <th>diabetesMed</th>\n",
+       "      <th>readmitted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>38394243</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>61</td>\n",
+       "      <td>0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>253</td>\n",
+       "      <td>401</td>\n",
+       "      <td>244</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>93205692</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>847</td>\n",
+       "      <td>276</td>\n",
+       "      <td>577</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>294201</td>\n",
+       "      <td>AfricanAmerican</td>\n",
+       "      <td>1</td>\n",
+       "      <td>95</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>49</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>599</td>\n",
+       "      <td>428</td>\n",
+       "      <td>41</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>38943243</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>0</td>\n",
+       "      <td>55</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>38</td>\n",
+       "      <td>3</td>\n",
+       "      <td>41</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>440</td>\n",
+       "      <td>585</td>\n",
+       "      <td>414</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>95752350</td>\n",
+       "      <td>Caucasian</td>\n",
+       "      <td>0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>77</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>560</td>\n",
+       "      <td>491</td>\n",
+       "      <td>250.02</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   patient_nbr             race  gender  age  admission_type_id  \\\n",
+       "0     38394243        Caucasian       0   75                  1   \n",
+       "1     93205692        Caucasian       0   45                  3   \n",
+       "2       294201  AfricanAmerican       1   95                  1   \n",
+       "3     38943243        Caucasian       0   55                  3   \n",
+       "4     95752350        Caucasian       0   75                  2   \n",
+       "\n",
+       "   discharge_disposition_id  admission_source_id  time_in_hospital  \\\n",
+       "0                         1                    7                 3   \n",
+       "1                         1                    7                 2   \n",
+       "2                         6                    7                 3   \n",
+       "3                         1                    1                 3   \n",
+       "4                         6                    7                 7   \n",
+       "\n",
+       "   num_lab_procedures  num_procedures  num_medications  number_outpatient  \\\n",
+       "0                  61               0               21                  0   \n",
+       "1                  35               0               14                  6   \n",
+       "2                  49               0               10                  0   \n",
+       "3                  38               3               41                  2   \n",
+       "4                  77               0               26                  0   \n",
+       "\n",
+       "   number_emergency  number_inpatient diag_1 diag_2  diag_3  number_diagnoses  \\\n",
+       "0                 0                 0    253    401     244                 8   \n",
+       "1                 7                 2    847    276     577                 8   \n",
+       "2                 0                 2    599    428      41                 9   \n",
+       "3                 0                 0    440    585     414                 6   \n",
+       "4                 0                 1    560    491  250.02                 9   \n",
+       "\n",
+       "   max_glu_serum  A1Cresult  metformin  repaglinide  nateglinide  \\\n",
+       "0            0.0        0.0          0            0            0   \n",
+       "1            0.0        0.0          0            0            0   \n",
+       "2            0.0        0.0          0            0            0   \n",
+       "3            0.0        0.0          0            0            0   \n",
+       "4            0.0        3.0          0            0            0   \n",
+       "\n",
+       "   chlorpropamide  glimepiride  acetohexamide  glipizide  glyburide  \\\n",
+       "0               0            0              0          0          0   \n",
+       "1               0            0              0          0          0   \n",
+       "2               0            0              0          1          0   \n",
+       "3               0            0              0          0          0   \n",
+       "4               0            0              0          0          1   \n",
+       "\n",
+       "   tolbutamide pioglitazone  rosiglitazone  acarbose  miglitol  troglitazone  \\\n",
+       "0            0           No              0         0         0             0   \n",
+       "1            0           No              0         0         0             0   \n",
+       "2            0           No              0         0         0             0   \n",
+       "3            0           No              1         0         0             0   \n",
+       "4            0           No              0         0         0             0   \n",
+       "\n",
+       "   tolazamide  insulin  glyburide-metformin  glipizide-metformin  \\\n",
+       "0           0        0                    0                    0   \n",
+       "1           0        1                    0                    0   \n",
+       "2           0        1                    0                    0   \n",
+       "3           0        1                    0                    0   \n",
+       "4           0        1                    0                    0   \n",
+       "\n",
+       "   glimepiride-pioglitazone  metformin-rosiglitazone  metformin-pioglitazone  \\\n",
+       "0                         0                        0                       0   \n",
+       "1                         0                        0                       0   \n",
+       "2                         0                        0                       0   \n",
+       "3                         0                        0                       0   \n",
+       "4                         0                        0                       0   \n",
+       "\n",
+       "   change  diabetesMed  readmitted  \n",
+       "0       0            0           1  \n",
+       "1       1            1           1  \n",
+       "2       1            1           1  \n",
+       "3       1            1           1  \n",
+       "4       1            1           1  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aaaaa = os.path.join(\"..\\\\data\\\\03_primary\\\\hospital_test_data.csv\")\n",
+    "aaaaaaaaa = pd.read_csv(aaaaa)\n",
+    "aaaaaaaaa.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
