testing connection to FS

--- a/notebooks/Feature_Store.ipynb
+++ b/notebooks/Feature_Store.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,14 +89,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# project's NOT WORKING\n",
     "SETTINGS_STORE = {\n",
     "    \"FS_API_KEY\" : \"69gkMScoBHwdxjnl.drmoEth2xNKAT2h4Y1WNWM0XOk1v7iUykYZSTbvUlIEyRLIuucDyOz7plnF5qsEK\",\n",
     "    \"FS_PROJECT_NAME\" : \"mlops_api\"\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connection closed.\n",
+      "Connected. Call `.close()` to terminate connection gracefully.\n"
+     ]
+    },
+    {
+     "ename": "ProjectException",
+     "evalue": "Could not find project mlops_api",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mProjectException\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# checking connection\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m project \u001b[38;5;241m=\u001b[39m \u001b[43mhopsworks\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlogin\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m        \u001b[49m\u001b[43mapi_key_value\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mSETTINGS_STORE\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mFS_API_KEY\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mproject\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mSETTINGS_STORE\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mFS_PROJECT_NAME\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m feature_store \u001b[38;5;241m=\u001b[39m project\u001b[38;5;241m.\u001b[39mget_feature_store()\n",
+      "File \u001b[1;32m~\\Desktop\\MSDSAA\\Y1\\S2\\MLOps\\env\\lib\\site-packages\\hopsworks\\__init__.py:198\u001b[0m, in \u001b[0;36mlogin\u001b[1;34m(host, port, project, api_key_value, api_key_file)\u001b[0m\n\u001b[0;32m    196\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    197\u001b[0m     _hw_connection \u001b[38;5;241m=\u001b[39m _hw_connection(host\u001b[38;5;241m=\u001b[39mhost, port\u001b[38;5;241m=\u001b[39mport, api_key_value\u001b[38;5;241m=\u001b[39mapi_key)\n\u001b[1;32m--> 198\u001b[0m     _connected_project \u001b[38;5;241m=\u001b[39m \u001b[43m_prompt_project\u001b[49m\u001b[43m(\u001b[49m\u001b[43m_hw_connection\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mproject\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    199\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m RestAPIError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    200\u001b[0m     logout()\n",
+      "File \u001b[1;32m~\\Desktop\\MSDSAA\\Y1\\S2\\MLOps\\env\\lib\\site-packages\\hopsworks\\__init__.py:281\u001b[0m, in \u001b[0;36m_prompt_project\u001b[1;34m(valid_connection, project)\u001b[0m\n\u001b[0;32m    279\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m proj\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m==\u001b[39m project:\n\u001b[0;32m    280\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m proj\n\u001b[1;32m--> 281\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m ProjectException(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not find project \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(project))\n",
+      "\u001b[1;31mProjectException\u001b[0m: Could not find project mlops_api"
+     ]
+    }
+   ],
+   "source": [
+    "# checking connection\n",
+    "\n",
+    "project = hopsworks.login(\n",
+    "        api_key_value=SETTINGS_STORE[\"FS_API_KEY\"], project=SETTINGS_STORE[\"FS_PROJECT_NAME\"]\n",
+    "    )\n",
+    "\n",
+    "feature_store = project.get_feature_store()"
    ]
   },
   {
@@ -187,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -201,9 +239,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
