unit tests: feature engineering, data cleanning, model selection

--- a/notebooks/01_data_exploration_and_cleaning.ipynb
+++ b/notebooks/01_data_exploration_and_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "path_to_file = os.path.join(\"../data/01_raw/diabetic_data.csv\")\n",
     "df = pd.read_csv(path_to_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "acetohexamide\n",
+       "No        101765\n",
+       "Steady         1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"acetohexamide\"].value_counts()"
    ]
   },
   {
